pyxis: fod: Back to 1.1
This reverts commit 39eeae055efc9ae7e68fede628362f0d3a4df1c5.

Signed-off-by: DarkAngelGR <asavvo01@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1117,4 +1117,8 @@
     <bool name="config_dozePulsePickup">true</bool>
     <bool name="config_dozePulseTilt">true</bool>
     <bool name="config_dozePulseProximity">true</bool>
+
+    <!-- Whether to show a custom view for FOD -->
+    <bool name="config_needCustomFODView">true</bool>
+
 </resources>
