--- a/parts/res/values-night/color.xml
+++ b/parts/res/values-night/color.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/switchbar_background_color" android:state_activated="false" />
-    <item android:color="?android:attr/colorAccent" android:state_activated="true" />
-</selector>
+<resources>
+    <color name="switchbar_switch_track_tint">#82000000</color>
+    <color name="switchbar_switch_thumb_tint">@android:color/black</color>
+</resources>
