--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -18,23 +18,21 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreference
-        android:key="always_on_display"
         android:disableDependentsState="true"
-        android:title="@string/ambient_display_always_on_title"
-        android:summary="@string/ambient_display_always_on_summary"
+        android:key="always_on_display"
         android:persistent="false"
-        android:icon="@drawable/ic_eye" />
+        android:summary="@string/ambient_display_always_on_summary"
+        android:title="@string/ambient_display_always_on_title" />
 
     <PreferenceCategory
         android:key="pickup_sensor"
         android:title="@string/pickup_sensor_title">
 
         <SwitchPreference
-            android:key="gesture_pick_up"
             android:defaultValue="false"
-            android:title="@string/pick_up_gesture_title"
+            android:key="gesture_pick_up"
             android:summary="@string/pick_up_gesture_summary"
-            android:icon="@drawable/ic_pickup" />
+            android:title="@string/pick_up_gesture_title" />
 
     </PreferenceCategory>
 
@@ -43,18 +41,16 @@
         android:title="@string/proximity_sensor_title">
 
         <SwitchPreference
-            android:key="gesture_hand_wave"
             android:defaultValue="false"
-            android:title="@string/hand_wave_gesture_title"
+            android:key="gesture_hand_wave"
             android:summary="@string/hand_wave_gesture_summary"
-            android:icon="@drawable/ic_hand" />
+            android:title="@string/hand_wave_gesture_title" />
 
         <SwitchPreference
-            android:key="gesture_pocket"
             android:defaultValue="false"
-            android:title="@string/pocket_gesture_title"
+            android:key="gesture_pocket"
             android:summary="@string/pocket_gesture_summary"
-            android:icon="@drawable/ic_pocket" />
+            android:title="@string/pocket_gesture_title" />
 
     </PreferenceCategory>
 
