--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -22,7 +22,8 @@
         android:key="always_on_display"
         android:persistent="false"
         android:summary="@string/ambient_display_always_on_summary"
-        android:title="@string/ambient_display_always_on_title" />
+        android:title="@string/ambient_display_always_on_title"
+        android:icon="@drawable/ic_eye" />
 
     <PreferenceCategory
         android:key="pickup_sensor"
@@ -32,7 +33,8 @@
             android:defaultValue="false"
             android:key="gesture_pick_up"
             android:summary="@string/pick_up_gesture_summary"
-            android:title="@string/pick_up_gesture_title" />
+            android:title="@string/pick_up_gesture_title"
+            android:icon="@drawable/ic_pickup" />
 
     </PreferenceCategory>
 
@@ -44,13 +46,15 @@
             android:defaultValue="false"
             android:key="gesture_hand_wave"
             android:summary="@string/hand_wave_gesture_summary"
-            android:title="@string/hand_wave_gesture_title" />
+            android:title="@string/hand_wave_gesture_title" 
+            android:icon="@drawable/ic_hand" />
 
         <SwitchPreference
             android:defaultValue="false"
             android:key="gesture_pocket"
             android:summary="@string/pocket_gesture_summary"
-            android:title="@string/pocket_gesture_title" />
+            android:title="@string/pocket_gesture_title"
+            android:icon="@drawable/ic_pocket" />
 
     </PreferenceCategory>
 
