--- a/overlay-pe/packages/apps/Settings/res/values/custom_config.xml
+++ b/overlay-pe/packages/apps/Settings/res/values/custom_config.xml
@@ -23,6 +23,6 @@
     -->
     <integer name="config_fingerprintSensorLocation">1</integer>
 
-    <!-- Device specific doze package
-    <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string> -->
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
 </resources>
