--- a/overlay/frameworks/base/core/res/res/values-mcc302-mnc640/config.xml
+++ b/overlay/frameworks/base/core/res/res/values-mcc302-mnc640/config.xml
@@ -19,7 +19,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Values for GPS configuration (Rogers) -->
+    <!-- Values for GPS configuration (Bell) -->
     <string-array translatable="false" name="config_gpsParameters">
         <item>SUPL_HOST=supl.google.com</item>
         <item>SUPL_PORT=7275</item>
@@ -30,11 +30,6 @@
         <item>USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1</item>
         <item>A_GLONASS_POS_PROTOCOL_SELECT=0</item>
         <item>GPS_LOCK=0</item>
-    </string-array>
-
-    <string-array name="wfcSpnFormats">
-        <item>%s</item>
-        <item>%s Wi-Fi</item>
     </string-array>
 
 </resources>
